--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
@@ -21,6 +23,9 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
-    "prettier-eslint": "^8.8.2"
+    "node-sass": "^4.9.3",
+    "prettier-eslint": "^8.8.2",
+    "sass-loader": "^7.1.0",
+    "webpack": "3.11.0"
   }
 }
