--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "8",
     "bootstrap": "3",
+    "draft-js": "^0.10.5",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-scripts": "1.1.4"
   },
   "scripts": {
