--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "babel-eslint": "8",
     "bootstrap": "3",
     "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-draft-wysiwyg": "^1.12.13",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
