--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "bootstrap": "3",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
+    "form-data": "^2.3.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-loading": "^2.0.3",
+    "react-modal-bootstrap": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
