--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "form-data": "^2.3.2",
+    "lodash": "^4.17.11",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
